@@ -1,4 +1,5 @@
-+Revamped the way the JurassiCraft vehicle seats work
+*Revamped the way the JurassiCraft vehicle seats work
+*Fixed a breaking crash with the dinosaur's inventories
 *Vines are burnable and sound like vines again
 +Pushing/Pulling items with hoppers in JC machines is now supported
 *Fixed syncing issues of the cultivator
